add gender and status information

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <script src="src/js/data.js"></script>
   <script src="src/js/data/2020-02-13.js"></script>
+  <script src="src/js/data/2020-02-16.js"></script>
 
   <script src="src/js/html2canvas.min.js"></script>
   <script src="src/js/lz-string.min.js"></script>
@@ -72,6 +73,10 @@
         <p>Keyboard controls during sorting: H/LeftArrow (pick left) J/DownArrow (undo) K/UpArrow (tie) L/RightArrow (pick right) S (save progress).</p>
         <p>Before sorting: S/Enter (start sorting) L (load progress).
         <p>1/2/3 always correspond to the first/second/third buttons.</p>
+
+        <br><br>
+
+        <p>February 16th, 2020 - Added filter for gender and status.</p>
     </div>
 </div>
 </body>
