add retired characters from Nijisanji

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <br><br>
 
-        <p>February 16th, 2020 - Added filter for gender and status. Added links to the youtube channel on characters' names.</p>
+        <p>February 16th, 2020 - Added filter for gender and status. Added links to the youtube channel on characters' names. Added retired members from Nijisanji.</p>
     </div>
 </div>
 </body>
