add filters for nationality and language

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="src/js/data.js"></script>
   <script src="src/js/data/2020-02-13.js"></script>
   <script src="src/js/data/2020-02-16.js"></script>
+  <script src="src/js/data/2020-02-17.js"></script>
 
   <script src="src/js/html2canvas.min.js"></script>
   <script src="src/js/lz-string.min.js"></script>
@@ -77,6 +78,7 @@
         <br><br>
 
         <p>February 16th, 2020 - Added filter for gender and status. Added links to the youtube channel on characters' names. Added retired members from Nijisanji.</p>
+        <p>February 17th, 2020 - Added filter for nacionality and language.</p>
     </div>
 </div>
 </body>
